# deepseek_pdf_ocr

./: .gitignore  pyproject.toml
src/: demo.ipynb  ocr_api_server.py  ocr_api_server_vllm.py
src/deepseek_pdf_ocr/: __init__.py  change_filter.py  cli.py  correction.py  langchain_compat.py  loader.py  merge_markdown.py  ocr.py  pdf_utils.py  pipeline.py  pipeline_vllm.py  post_process.py  prompt_loader.py
src/deepseek_pdf_ocr/prompt/: few_shot_prompt.md  judge_change_filter.md
