[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deepseek-pdf-ocr"
version = "0.1.0"
description = "PDF OCR pipeline powered by DeepSeek OCR + GPT correction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ivey"},
]
keywords = ["ocr", "pdf", "deepseek", "markdown"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "numpy>=1.24",
    "tqdm>=4.60",
    "torch>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = ["pytest", "ruff"]

[project.scripts]
deepseek-pdf-ocr = "deepseek_pdf_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]